<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_rectangle_radius"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/grayDark"
            android:textStyle="bold"
            android:textSize="@dimen/text_default"
            android:text="@string/sort_by"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/edit_sortby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_default"
                android:editable="false"
                android:hint="@string/hint_sortby"
                android:layout_marginRight="10dp"
                tools:ignore="Autofill,RtlHardcoded,TextFields"/>

        <ImageView
                android:id="@+id/image_sortby"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/arrow"
                android:contentDescription="@string/image_sortby"/>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/grayDark"
            android:textStyle="bold"
            android:textSize="@dimen/text_default"
            android:text="@string/genres"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/edit_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_default"
                android:editable="false"
                android:hint="@string/hint_genres"
                android:layout_marginRight="10dp"
                tools:ignore="Autofill,RtlHardcoded,TextFields"/>

        <ImageView
                android:id="@+id/image_genres"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/arrow"
                android:contentDescription="@string/image_sortby"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/grayDark"
                android:textStyle="bold"
                android:textSize="@dimen/text_default"
                android:text="@string/include_adult"/>

        <Switch
            android:id="@+id/switch_adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/blue"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/grayDark"
                android:textStyle="bold"
                android:textSize="@dimen/text_default"
                android:text="@string/with_videos"/>

        <Switch
                android:id="@+id/switch_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/blue"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/text_year_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/grayDark"
                android:textStyle="bold"
                android:textSize="@dimen/text_default"
                android:text="@string/year"/>

        <EditText
                android:id="@+id/edit_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_default"
                android:hint="@string/hint_year"
                android:textAlignment="center"
                tools:ignore="Autofill,RtlHardcoded,TextFields"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/grayDark"
                android:textStyle="bold"
                android:textSize="@dimen/text_default"
                android:text="@string/original_language"/>

        <EditText
                android:id="@+id/edit_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_default"
                android:hint="@string/hint_language"
                android:textAlignment="center"
                tools:ignore="Autofill,RtlHardcoded,TextFields"/>

    </LinearLayout>

    <Button
            android:id="@+id/button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_default"
            android:textStyle="bold"
            android:background="@drawable/bg_blue_rectangle_radius"
            android:text="@string/search"/>

</LinearLayout>