<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_margin="25dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_rectangle_radius"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/linear_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bg_white_rectangle_blue_radius"
            tools:ignore="UselessLeaf">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_movie"
                android:src="@drawable/movie"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                android:text="@string/movies"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bg_white_rectangle_blue_radius"
            tools:ignore="UselessLeaf">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_tv"
                android:src="@drawable/tv"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                android:text="@string/tv_series"/>

    </LinearLayout>

</LinearLayout>