<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".fragment.HomeFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/blue"
                app:tabTextColor="@color/white"
                app:tabIndicatorHeight="5dp"
                app:tabIndicatorColor="@color/yellow"
                app:tabSelectedTextColor="@color/yellow">

            <android.support.design.widget.TabItem
                    android:id="@+id/popular_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"/>

            <android.support.design.widget.TabItem
                    android:id="@+id/top_rated_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"/>

            <android.support.design.widget.TabItem
                    android:id="@+id/upcoming_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"/>

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>